--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^3.0.4"
+    "web-vitals": "^3.0.4",
+    "react-bootstrap": "^2.4.0",
+    "react-plotly.js": "^2.5.1",
+    "react-router-dom": "^6.3.0",
+    "bootstrap": "^5.1.3",
+    "@tanstack/react-query": "^4.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +37,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint": "^8.28.0",
+    "eslint-plugin-react": "^7.31.11",
+    "@tanstack/react-query-devtools": "^4.0.10",
+    "flow-bin": "^0.184.0"
   }
 }
