--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Avocado",
-  "name": "Avocado.fun",
+  "short_name": "Bulavin",
+  "name": "Bulavin",
   "icons": [
     {
       "src": "/maskable_icon_x192.png",
