--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^4.0.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "bootstrap": "^5.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^3.0.4",
     "react-bootstrap": "^2.4.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.40.0",
     "react-plotly.js": "^2.5.1",
     "react-router-dom": "^6.3.0",
-    "bootstrap": "^5.1.3",
-    "@tanstack/react-query": "^4.0.10"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^3.0.4",
+    "axios": "^0.27.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,11 +41,11 @@
     ]
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.0.10",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.28.0",
     "eslint-plugin-react": "^7.31.11",
-    "@tanstack/react-query-devtools": "^4.0.10",
     "flow-bin": "^0.184.0"
   }
 }
