--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,27 @@
-attrs==22.1.0
-click==8.1.3
-exceptiongroup==1.0.4
-Flask==2.2.2
-Flask-Cors==3.0.10
-importlib-metadata==5.1.0
-iniconfig==1.1.1
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.2.0
-MarkupSafe==2.1.1
-numpy==1.23.5
-packaging==21.3
-pandas==1.5.2
-pluggy==1.0.0
-pyparsing==3.0.9
-pytest==7.2.0
-python-dateutil==2.8.2
-pytz==2022.6
-scikit-learn==1.1.3
-scipy==1.9.3
-six==1.16.0
-sklearn==0.0
-threadpoolctl==3.1.0
-tomli==2.0.1
-Werkzeug==2.2.2
-zipp==3.11.0
+attrs
+click
+exceptiongroup
+Flask
+Flask-Cors
+importlib-metadata
+iniconfig
+itsdangerous
+Jinja2
+joblib
+MarkupSafe
+numpy
+packaging
+pandas
+pluggy
+pyparsing
+pytest
+python-dateutil
+pytz
+scikit-learn
+scipy
+six
+sklearn
+threadpoolctl
+tomli
+Werkzeug
+zipp
